# DispatchOpsAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/v1/: dependencies.py  extraction.py  health.py  jobs.py  router.py  transcription.py
app/llm/: groq_client.py  prompts.py
app/repositories/: job_repository.py
app/schemas/: job.py
app/services/: extraction_service.py  transcription_service.py  upload_service.py
app/transcription/: whisper_service.py
app/utils/: exceptions.py  logger.py  retry.py
app/workers/: celery_worker.py  tasks.py
prompts/: dispatch_extraction.md
tests/: conftest.py
tests/integration/: test_extraction_api.py  test_health.py  test_transcription_api.py  test_upload_api.py
tests/unit/: test_config.py  test_extraction_service.py  test_groq_client.py  test_job_repository.py  test_retry.py  test_transcription_service.py  test_upload_service.py  test_whisper_service.py
